[package]
name = "wolfensteiner"
version = "0.1.0"
edition = "2021"
description = "A wolfenstein implementation in rust/wasm"
license = "apache-2.0"
authors = ["Morgan Welsch <welschmorgan@gmail.com>"]
repository = ""

[lib]
crate-type = ["cdylib"] # , "rlib"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"
console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
